fix: spacing and likn bog

--- a/dayanShop-project1-middLeveal/functions/css/header.css
+++ b/dayanShop-project1-middLeveal/functions/css/header.css
@@ -85,6 +85,7 @@ img {
 
 .enter-text-header {
   cursor: pointer;
+  color: #000 !important;
 }
 
 .search-box-header {
