--- a/dayanShop-project1-middLeveal/login-form/login-form.css
+++ b/dayanShop-project1-middLeveal/login-form/login-form.css
@@ -182,7 +182,8 @@ input[type="checkbox"] {
   margin: 4rem 0;
 }
 .login-form {
-  gap: 1.5rem;
+  gap: 2rem;
+  padding: 1rem 0;
 }
 /* #divName {
   margin-bottom: 0 !important;
